--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="THE OFFICIAL PORTFOLIO OF LOVELIDGE" />
-    <title>LOVELIDGE PORT</title>
     <style>
       img {
         width: 500px;
@@ -17,13 +16,13 @@
         font-weight: bold;
       }
     </style>
-    <style>
-      em {
-        color: aquamarine;
-        font-style: normal;
-      }
-    </style>
   </head>
+
+  <head>
+    <h1><title>LOVELIDGE PORT</title></h1>
+  </head>
+
+  <link rel="stylesheet" href="style.css" />
   <body>
     <h1>
       <p><em>LOVELIDGE PORT</em></p>
